appId: isim.ia2y.myapplication
---
- extendedWaitUntil:
    visible:
      id: "isim.ia2y.myapplication:id/adminProductEditorBtnSave"
    timeout: 15000
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProductEditorBtnSave"
- extendedWaitUntil:
    visible:
      id: "isim.ia2y.myapplication:id/adminProduitsBtnAdd"
    timeout: 60000
- takeScreenshot: admin-products-after-direct-save
